--- a/assets/scss/atoms/buttons.scss
+++ b/assets/scss/atoms/buttons.scss
@@ -11,17 +11,23 @@
         /*  Default
             ========================================================================== */
             .btn {
-                display: inline-block;
-                margin-bottom: 0;
-                text-align: center;
-                vertical-align: middle;
-                cursor: pointer;
+                @include transition(background 0.25s ease);
                 background-image: none;
                 border: 1px solid transparent;
+                color: $color-white;
+                cursor: pointer;
+                display: inline-block;
+                font-size: 16px;
+                font-weight: 700;
+                margin-bottom: 2px;
+                margin-top: 2px;
+                outline: none;
+                overflow: hidden;
+                padding: 10px 16px;
+                position: relative;
+                text-align: center;
+                vertical-align: middle;
                 white-space: nowrap;
-                font-size: $btn-font-size;
-                padding: 6px 12px;
-                @include transition(background 0.25s ease);
             }
 
             .btn:hover,
@@ -33,63 +39,250 @@
             /*  Default
                 ========================================================================== */
                 .btn {
-                    background-color: $btn-bg;
-                    color: $btn-color;
+                    background-color: $color-default;
+                    
+                    /* w/ Border */
+                    &.btn-border{
+                        border-color: $color-default;
+                        color: $color-default;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-default;
+                    }
                 }
 
                 .btn:hover,
-                .btn:focus { background-color: $btn-hover-bg; }
+                .btn:focus { background-color: darken($color-default, 5%); }
 
             /*  Primary
                 ========================================================================== */
                 .btn-primary {
-                    background-color: $btn-primary-bg;
-                    color: $btn-primary-color;
+                    background-color: $color-primary;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-primary;
+                        color: $color-primary;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-primary;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-primary, 5%); }
+                }
+            
+            /*  Secondary
+                ========================================================================== */
+                .btn-secondary {
+                    background-color: $color-secondary;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-secondary;
+                        color: $color-gray-light;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-gray-light;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-secondary, 5%); }
                 }
 
-                .btn-primary:hover,
-                .btn-primary:focus { background-color: $btn-primary-hover-bg; }
+            /*  Tertiary
+                ========================================================================== */
+                .btn-tertiary {
+                    background-color: $color-tertiary;
+                    color: #fff;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-tertiary;
+                        color: $color-tertiary;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-tertiary;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-tertiary, 5%); }
+                }
 
             /*  Success
                 ========================================================================== */
                 .btn-success {
-                    background-color: $btn-success-bg;
-                    color: $btn-success-color;
+                    background-color: $color-success;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-success;
+                        color: $color-success;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-success;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-success, 5%); }
                 }
 
-                .btn-success:hover,
-                .btn-success:focus { background-color: $btn-success-hover-bg; }
-
-            /*  Danger
+            /*  Alert
                 ========================================================================== */
                 .btn-danger {
-                    background-color: $btn-danger-bg;
-                    color: $btn-danger-color;
+                    background-color: $color-danger;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-danger;
+                        color: $color-danger;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-danger;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-danger, 5%); }
                 }
 
-                .btn-danger:hover,
-                .btn-danger:focus { background-color: $btn-danger-hover-bg; }
+            /*  Warning
+                ========================================================================== */
+                .btn-warning {
+                    background-color: $color-warning;
+
+                    /* w/ Border and Round */
+                    &.btn-border,
+                    &.btn-round{
+                        border-color: $color-warning;
+                        color: $color-warning;
+                    }
+
+                    /* Single */
+                    &.btn-single{
+                        color: $color-warning;
+                    }
+
+                    &:hover,
+                    &:focus { background-color: darken($color-warning, 5%); }
+                }
+
+        /*  Sizes
+            ========================================================================== */
+
+            /*  Large
+                ========================================================================== */
+                .btn-large {
+                    font-size: 20px;
+                    padding: 15px 20px;
+
+                    &.btn-round{
+                        @include border-radius(30px);
+                    }
+                }
+
+            /*  Small
+                ========================================================================== */
+                .btn-small {
+                    font-size: 14px;
+                    padding: 8px;
+                }
+
+            /*  Mini
+                ========================================================================== */
+                .btn-mini {
+                    font-size: 12px;
+                    padding: 6px;
+                }
+
+        /*  Styles
+            ========================================================================== */
+
+            /*  Border
+                ========================================================================== */
+                .btn-border {
+                    border-width: 1px;
+                    border-style: solid;
+                    background-color: transparent;
+
+                    &:hover,
+                    &:focus { color: #fff; }
+                }
+
+            /*  Round
+                ========================================================================== */
+                .btn-round {
+                    @include border-radius(20px);
+                    border-width: 1px;
+                    border-style: solid;
+                    background-color: transparent;
+
+                    &:hover,
+                    &:focus { color: #fff; }
+                }
+
+            /*  Single
+                ========================================================================== */
+                .btn-single {
+                    background-color: transparent;
+
+                    &:hover,
+                    &:focus { color: #fff; }
+                }
+
+            /*  Inactive
+                ========================================================================== */
+                .btn.btn-inactive {
+                    border: 1px solid $color-gray-lightest;
+                    color: $color-gray-light;
+                    cursor: default;
+                    background: $color-gray-lightest;
+                }
+
+        /*  Block
+            ========================================================================== */
+            .btn-block {
+                display: block;
+            }
 
         /*  Social Share
             ========================================================================== */
-            .social-button{
+            .social-btn {
                 @include border-radius(2px);
                 @include transition(all .3s ease);
                 background-color: #666;
-                padding: 5px 10px;
-                font-family: "Arial";
-                font-weight: bold;
-                font-size: 11px;
-                line-height: 11px;
-                border-bottom: 1px solid #444;
+                border-bottom: 1px solid $color-gray-dark;
                 color: #fff;
-                text-align: center;
                 display: inline-block;
+                font-family: "Arial";
+                font-size: 11px;
+                font-weight: bold;
+                line-height: 11px;
+                margin-bottom: 2px;
+                margin-top: 2px;
+                padding: 5px 10px;
+                text-align: center;
                 text-transform: uppercase;
 
                 > *{
                     display: inline-block;
-                    vertical-align: middle;
+                    vertical-align: sub;
                 }
 
                 /* icon font-awesome */
@@ -106,7 +299,7 @@
                 &:focus{
                     @include transition(all .3s ease);
                     @include box-shadow(0 0 1px 2px rgba(0,0,0,0.1));
-                    background-color: #999;
+                    background-color: $color-gray;
                     text-decoration: none;
                     border-bottom: 1px solid transparent;
 
@@ -120,16 +313,18 @@
                 }
 
                 /* small share*/
-                .social-small &{
+                .btn-small & {
                     font-size: 10px;
                     line-height: 10px;
 
                     /* icon font-awesome */
                     > i{
+                        letter-spacing: 0;
                         font-size: 16px;
                         line-height: 16px;
                         margin:0px;
                         width: 18px;
+                        vertical-align: -14%;
                     }
 
                 }
