--- a/assets/scss/atoms/tables.scss
+++ b/assets/scss/atoms/tables.scss
@@ -7,7 +7,19 @@
      */
 
     @media only screen {
-
+        table {
+            color: #333;
+            margin-bottom: 20px;
+            text-align: left;
+            width: 100%;
+            th, td {
+                border-bottom: 1px solid #CCC;
+                padding: 15px 0;
+                text-align: left;
+                font-size: 16px;
+                line-height: 24px;
+            }
+        }
     }
 
 
