--- a/styleguide/assets/css/main.scss
+++ b/styleguide/assets/css/main.scss
@@ -4,8 +4,8 @@
 
     /*  Atoms
         ========================================================================== */
-        @import "../../../assets/scss/base/variables";
-        @import "../../../assets/scss/base/mixins";
+        @import "../../../assets/scss/1.settings/variables";
+        @import "../../../assets/scss/2.tools/mixins";
 
     /*
      * CSS for all devices
