--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -31,8 +31,8 @@
 
 /* Componentes
     ========================================================================== */
-    @import "7.componentes/breadcrumbs";
-    @import "7.componentes/pagination";
+    @import "7.components/breadcrumbs";
+    @import "7.components/pagination";
 
 /* Helpers
     ========================================================================== */
